# sweeper

./: .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  config.sample.json  data_sweeper.py  pyproject.toml  readme.md  requirements.dev.txt  requirements.txt  scheduled_sweeper.bat  setup.cfg  setup.py  sweep_empty_geometry.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: pull_request.yml  push.yml  python.yml  release.yml
src/sweeper/: __main__.py  address_parser.py  backup.py  config.py  credentials_template.py  duplicates.py  empties.py  report.py  street_types.json  test_address_parser.py  utilities.py  version.py  workspace_info.py
src/sweeper/sweepers/: UseLimitations.html  addresses.py  base.py  connections.py  duplicates.py  empties.py  invalids.py  metadata.py  sweeperbase.py
src/sweeper/sweepers/opensource/: empties.py
src/sweeper/tests/: test_address_parser.py  test_addresses.py  test_metadata.py
tests/: conftest.py  mock_arcpy.py  test_address_parser.py  test_addresses.py  test_duplicates.py  test_metadata.py  test_utilities.py
tests/data/: Sweeper as CADASTRE.sde
tests/data/addresses.gdb/: a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByName.atx  a00000007.gdbtable  a00000009.gdbtablx
(+12 files in other folders)
