[tool.ruff]
line-length = 120
[tool.ruff.lint]
ignore = ["E501"]
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src"]
norecursedirs = [".env", "data", "maps", ".github", ".vscode"]
console_output_style = "count"
addopts = "--cov-branch --cov=sweeper --cov-report term --cov-report xml:cov.xml --instafail -p no:faulthandler"
[build-system]
requires = ["setuptools >= 70.2"]
